[gd_scene load_steps=7 format=2]

[ext_resource path="res://RECURSOS/IMAGENES/TRAMPAS/Ballesta/Prototipo_ballesta1.png" type="Texture" id=1]
[ext_resource path="res://SISTEMA/OBJETOS/TRAMPAS/Trampa.tscn" type="PackedScene" id=2]
[ext_resource path="res://SISTEMA/OBJETOS/TRAMPAS/Ballesta.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 23 )

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 192.5, 31 )

[node name="Ballesta" instance=ExtResource( 2 )]
z_index = -1
script = ExtResource( 3 )
rondas = 1
tiempo_entre_ciclos = 1.0

[node name="Sprite" parent="." index="0"]
position = Vector2( 0, 47 )
texture = ExtResource( 1 )
offset = Vector2( -1, -24 )

[node name="p1" type="Position2D" parent="Sprite" index="0"]
position = Vector2( 16, -14 )

[node name="p2" type="Position2D" parent="Sprite" index="1"]
position = Vector2( 16, -27 )

[node name="p3" type="Position2D" parent="Sprite" index="2"]
position = Vector2( 16, -39 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="Sprite" index="3"]
collision_layer = 1024
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/KinematicBody2D" index="0"]
position = Vector2( -1, -23 )
shape = SubResource( 3 )

[node name="CollisionShape2D" parent="ZonaActivacion" index="0"]
shape = SubResource( 1 )
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ZonaActivacion" index="1"]
visible = false
position = Vector2( -0.5, -32 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="2"]
position = Vector2( 1, 16.5 )
scale = Vector2( 0.25, 0.315 )
rect = Rect2( -300, -300, 600, 600 )

[connection signal="body_entered" from="ZonaActivacion" to="." method="_on_ZonaActivacion_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
